add creditRates